Fix missing GI transfer annotation for pango_layout_get_line_readonly()

https://bugzilla.gnome.org/show_bug.cgi?id=656014